# presmtechnologies

./: .gitignore  .replit  SECURITY.md  SHOPIFY_CHECKOUT_DIAGNOSIS.md  SHOPIFY_CHECKOUT_FIX.md  SHOPIFY_COMPLETE_SETUP.md  SHOPIFY_INTEGRATION_STATUS.md  SHOPIFY_SCOPES_SUMMARY.md  SHOPIFY_SETUP_GUIDE.md  backend_test.py  contracts.md  package-lock.json  pyproject.toml  replit.md  shopify.toml  start.sh  test_result.md
.emergent/: emergent.yml
attached_assets/: Pasted--read-analytics-Admin-API-App-Proxy-read-app-proxy-write-app-proxy-Admin-API-Assigned-f-1760201993118_1760201993121.txt  Pasted-You-are-an-expert-Shopify-Partner-App-DevOps-assistant-I-want-you-to-prepare-this-project-for-Shopi-1760188254496_1760188254502.txt
backend/: check_products.py  presm.db  requirements.txt  server.py  utils.py
backend/models/: cart.py  gang_sheet.py  order.py  product.py
backend/routes/: auth.py  cart.py  gang_sheets.py  products.py  shopify.py
backend/scripts/: sync_shopify_products.py
backend/services/: cart_service.py  database.py  gang_sheet_service.py  in_memory_cart_service.py  product_service.py  shopify_service.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: Footer.js  Navigation.js
frontend/src/context/: CartContext.js  ShopifyAuthContext.js
frontend/src/data/: mockData.js
frontend/src/hooks/: useShopifyAuth.js
frontend/src/pages/: AboutPage.js  CartPage.js  ContactPage.js  EducationPage.js  GangSheetBuilder.js  HomePage.js  ProductsPage.js
frontend/src/services/: api.js
